--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,10 @@ script:
 - cmake --build . --target package
 deploy:
   provider: script
+  on:
+  branches:
+        only:
+        - hw_1_0
   skip_cleanup: true
   script:
   - curl -T helloworld-0.0.$TRAVIS_BUILD_NUMBER-Linux.deb -umaxan1980:$BINTRAY_API_KEY "https://api.bintray.com/content/maxan1980/otus-cpp/helloworld/$TRAVIS_BUILD_NUMBER/helloworld-0.0.$TRAVIS_BUILD_NUMBER-Linux.deb;deb_distribution=trusty;deb_component=main;deb_architecture=amd64;publish=1"
