--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,9 @@
 cmake_minimum_required(VERSION 3.2)
 
-if(DEFINED $ENV{TRAVIS_BUILD_NUMBER})
+if(DEFINED {TRAVIS_BUILD_NUMBER})
     project(ip_filter VERSION 0.0.$ENV{TRAVIS_BUILD_NUMBER})
 else()
-    project(ip_filter VERSION 0.0.1)
+    project(ip_filter VERSION 0.0.100)
 endif()
 
 find_package(Boost COMPONENTS unit_test_framework REQUIRED)
