--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,14 @@
 language: cpp
 before_script:
 - sudo apt-get install libgtest-dev -y
-- sudo OLD_PATH=$PWD
+- OLD_PATH=$PWD
 - sudo cd /usr/src/gtest
 - sudo cmake CMakeLists.txt
 - sudo make
 - sudo cp *.a /usr/lib
 - echo "deb http://archive.ubuntu.com/ubuntu xenial main universe" | sudo tee -a /etc/apt/sources.list
 - sudo apt-get update -qq
-- sudo cd $OLD_PATH
+- cd $OLD_PATH
 script:
 - cmake .
 - cmake --build .
