--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,8 @@ before_script:
 - sudo apt-get install libgtest-dev -y
 - OLD_PATH=$PWD
 - cd /usr/src/gtest
-- cmake CMakeLists.txt
+- echo $PWD
+- sudo cmake CMakeLists.txt
 - sudo make
 - sudo cp *.a /usr/lib
 - echo "deb http://archive.ubuntu.com/ubuntu xenial main universe" | sudo tee -a /etc/apt/sources.list
