--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,5 @@
+
+
 language: cpp
 before_script:
 - sudo apt-get install libgtest-dev -y
@@ -10,6 +12,11 @@ before_script:
 - echo "deb http://archive.ubuntu.com/ubuntu xenial main universe" | sudo tee -a /etc/apt/sources.list
 - sudo apt-get update -qq
 - cd $OLD_PATH
+- sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
+- sudo apt-get update -qq
+- sudo apt-get install g++-8 libstdc++-8-dev
+- sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-8 90
+- sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-8 90
 script:
 - cmake .
 - cmake --build .
