--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,17 @@
+dist: xenial
+language: cpp
+compiler: gcc
 
+before_install:
+  - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
+  - sudo apt-get update -qq
+  - sudo apt-get install g++-8 libstdc++-8-dev
+  - sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-8 90
+  - sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-8 90
+
+install: autoreconf -if
+
+script: ./configure && make -j4 && make test
 
 language: cpp
 before_script:
@@ -12,11 +25,6 @@ before_script:
 - echo "deb http://archive.ubuntu.com/ubuntu xenial main universe" | sudo tee -a /etc/apt/sources.list
 - sudo apt-get update -qq
 - cd $OLD_PATH
-- sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
-- sudo apt-get update -qq
-- sudo apt-get install g++-8 libstdc++-8-dev
-- sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-8 90
-- sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-8 90
 script:
 - cmake .
 - cmake --build .
